style fixes for content cards, landing modified with wrapping div for stylistic purposes... THatParT

--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,14 @@ Header ul li a {
 
 Header ul li a:hover {
   color: tan;
+  text-shadow: 2px -2px 10px black;
+  text-decoration: overline underline;
 }
 
 section {
-  background-image: linear-gradient(to right,
-    #5d5d5d, #6f5b6a, #8d545f, #9c533e, #8e630b);
+  /* background-image: linear-gradient(to right,
+    #5d5d5d, #6f5b6a, #8d545f, #9c533e, #8e630b); */
+  background-image: linear-gradient(to top, #9d978f, #928a7e, #887d6d, #7d705d, #73634d);
   background-color: black;
   color: white;
   display: flex;
@@ -65,18 +68,26 @@ section {
 section>div {
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
   /* align-items: center; */
   width: 96%;
-  height: 34vh;
+  min-height: 34vh;
   text-align: center;
-  border: 1px solid white;
+  border: 1px solid black;
   margin-bottom: 1rem;
-  border-radius: 1rem;
+  border-radius: 0.4rem;
+}
+
+.content-card-title {
+  width: 100%;
+  background-color: #3B3233;
+  border-top-left-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
 }
 
 section div h2 {
   color: #655C63;
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 1px white;
   text-shadow: 1px 1px 4px black;
 }
 
@@ -84,7 +95,8 @@ section div .content-card-list {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  outline: 1px solid white;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
   width: 100%;
 }
 
@@ -102,6 +114,9 @@ section div .content-card-list ul {
 }
 
 @media screen and (min-width: 1400px) {
+  :root {
+    font-size: 2rem;
+  }
   section>div {
     width: 22%;
   }
